--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "calculadora-node",
+  "name": "calculadora-avanzada",
   "version": "1.0.0",
-  "description": "App de calculadora simple con Node.js y Express",
+  "description": "Calculadora avanzada con Node.js y Express",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "echo \"Preparando build...\" && mkdir -p dist && cp -r index.html style.css server.js dist/"
+    "build": "echo \"Build listo\""
   },
   "dependencies": {
-    "body-parser": "^1.20.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
