--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "echo \"Build listo\""
+    "build": "mkdir -p dist && cp index.html style.css dist && cp server.js dist && echo '{ \"name\": \"calculadora-avanzada\" }' > dist/package.json"
   },
   "dependencies": {
     "express": "^4.18.2"
