--- a/package.json
+++ b/package.json
@@ -1,17 +1,10 @@
 {
   "name": "calculadora-avanzada",
   "version": "1.0.0",
-  "description": "Calculadora avanzada con Node.js y Express",
-  "main": "server.js",
+  "description": "Calculadora avanzada con compilación estática",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "mkdir -p dist && cp index.html style.css dist && cp server.js dist && echo '{ \"name\": \"calculadora-avanzada\" }' > dist/package.json"
+    "build": "mkdir -p dist && cp index.html style.css script.js dist/",
+    "start": "echo 'Este proyecto es estático. Usa build.'"
   },
-  "dependencies": {
-    "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
-  }
+  "devDependencies": {}
 }
