--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "usuario/calculadora-avanzada",
-  "description": "App de calculadora avanzada para hosting",
+  "name": "usuario/calculadora-final",
+  "description": "Versión final estilizada de calculadora",
   "require": {}
 }
